--- a/credits.html
+++ b/credits.html
@@ -82,12 +82,12 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="textblock"><p>Envision maintainers : Dimitar Asenov</p>
 <h1><a class="anchor" id="contributors"></a>
 Source code contributors (in alphabetical order)</h1>
-<p>Andrea Helfenstein</p>
+<p>Andrea Helfenstein - <a href="https://github.com/helandre">https://github.com/helandre</a></p>
 <ul>
 <li>Declarative API for defining visualizations and supporting documentation</li>
 </ul>
 <p><br/>
- Dimitar Asenov</p>
+ Dimitar Asenov - <a href="https://github.com/dimitar-asenov">https://github.com/dimitar-asenov</a></p>
 <ul>
 <li>Core Envision framework and MVC implementation</li>
 <li>Extensions for object-oriented programming</li>
@@ -96,7 +96,7 @@ Source code contributors (in alphabetical order)</h1>
 <li>Documentation</li>
 </ul>
 <p><br/>
- Lukas Vogel</p>
+ Lukas Vogel - <a href="https://github.com/lukedirtwalker">https://github.com/lukedirtwalker</a></p>
 <ul>
 <li>Enhancements to the object-oriented model</li>
 </ul>
