--- a/compilation.html
+++ b/compilation.html
@@ -81,11 +81,12 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="contents">
 <div class="textblock"><p>Envision is written in C++ and uses features from the C++11 standard.</p>
 <p>Make sure your C++ compiler is up-to-date. GCC version 4.8 or newer should be sufficient.</p>
-<p>Envision currently uses the Qt 4.8 libraries but a migration to Qt 5 is planned.</p>
+<p>Envision currently uses the Qt 4.8 libraries but a migration to Qt 5 is planned. An additional dependency is lp_solve 5.5: <a href="http://lpsolve.sourceforge.net/">http://lpsolve.sourceforge.net/</a></p>
 <h1><a class="anchor" id="eclipse"></a>
 Using Eclipse (recommended)</h1>
 <ol type="1">
 <li>If you do not have the Qt development version installed, download and install it.</li>
+<li>Download and install the lp_solve development library version 5.5.</li>
 <li>Download and install the Qt Integration plug-in for your version of eclipse (32/64 bit).</li>
 <li>Inside Eclipse, configure Qt so that it knows where to find the development files.</li>
 <li>Download Envision's sources. The project is structured in separate directories where each one is an Eclipse/Qt project.</li>
@@ -96,6 +97,7 @@ Using Eclipse (recommended)</h1>
 Using the command line or Qt Creator</h1>
 <ol type="1">
 <li>If you do not have the Qt SDK installed, download and install it.</li>
+<li>Download and install the lp_solve development library version 5.5.</li>
 <li>Download Envision's sources. The main project is a Qt folders project which contains all the plug-ins. If you want to use Qt Creator you should open the <code>envision.pro</code> file in the main directory. Support for Qt Creator is minimal, but will be improved in the future.</li>
 <li>In the top-level project directory run <pre class="fragment">qmake -recursive
 sh maker.sh</pre></li>
