update doc for Qt 5

--- a/architecture.html
+++ b/architecture.html
@@ -131,7 +131,7 @@ The Qt framework and Envision</h1>
 <li>Better collections - the collection classes offered by Qt have a richer interface and are generally more convenient compared to their alternatives from the C++ standard library. </li>
 <li>Unicode strings - Qt provides true Unicode character and string classes. Although this feature is now natively supported in C++11, when the project was started C++ did not offer a good solution. </li>
 <li>XML processing - classes for working with XML files and data structures are provided and different access methods are supported (DOM and SAX). </li>
-<li>Excellent graphics framework - <a href="http://qt-project.org/doc/qt-4.8/graphicsview.html">Qt’s GraphicsView framework</a> is a perfect match for Envision’s visualization requirements. It offers a powerful toolkit for designing custom visualizations and managing huge hierarchies of graphical objects. It also supports rendering through OpenGL for optimized user experience.</li>
+<li>Excellent graphics framework - <a href="qt-project.org/doc/graphicsview.html">Qt’s GraphicsView framework</a> is a perfect match for Envision’s visualization requirements. It offers a powerful toolkit for designing custom visualizations and managing huge hierarchies of graphical objects. It also supports rendering through OpenGL for optimized user experience.</li>
 </ul>
 <h1><a class="anchor" id="plug-in-extension"></a>
 Plug-in extensions</h1>
